ci: split CI into path-filtered frontend and rust jobs
Split the monolithic `check` job into separate `frontend` and `rust`
jobs with dorny/paths-filter gating. Docs-only PRs now skip both.

- Add `changes` job to detect which subsystems were modified
- Run frontend checks on ubuntu-latest only (platform-independent)
- Run rust checks on 3-OS matrix with Swatinem/rust-cache
- Run cargo fmt only on Linux (formatting is platform-independent)
- Remove redundant vite build and cargo build steps (clippy compiles)
- Add ci-ok rollup job for branch protection
- Pin all actions to SHA hashes with version comments
- Add explicit permissions and persist-credentials: false

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,45 +5,71 @@ on:
     branches: [main]
   pull_request:
 
+permissions:
+  contents: read
+
 jobs:
   commitlint:
     if: github.event_name == 'pull_request'
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@34e114876b0b11c390a56381ad16ebd13914f8d5  # v4.3.1
         with:
           fetch-depth: 0
+          persist-credentials: false
 
-      - uses: wagoid/commitlint-github-action@v6
+      - uses: wagoid/commitlint-github-action@b948419dd99f3fd78a6548d48f94e3df7f6bf3ed  # v6.2.1
 
-  check:
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
-    runs-on: ${{ matrix.os }}
+  changes:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      pull-requests: read
+    outputs:
+      frontend: ${{ steps.filter.outputs.frontend }}
+      rust: ${{ steps.filter.outputs.rust }}
     steps:
-      - uses: actions/checkout@v4
-
-      - uses: dtolnay/rust-toolchain@stable
+      - uses: actions/checkout@34e114876b0b11c390a56381ad16ebd13914f8d5  # v4.3.1
         with:
-          components: clippy, rustfmt
+          fetch-depth: 2
+          persist-credentials: false
 
-      - uses: actions/setup-node@v4
+      - uses: dorny/paths-filter@de90cc6fb38fc0963ad72b210f1f284cd68cea36  # v3.0.2
+        id: filter
+        with:
+          filters: |
+            frontend:
+              - 'src/**'
+              - 'shared/**'
+              - 'package.json'
+              - 'package-lock.json'
+              - 'tsconfig.json'
+              - 'tsconfig.node.json'
+              - 'vite.config.ts'
+              - 'vitest.config.ts'
+              - 'eslint.config.js'
+              - 'index.html'
+              - '.github/workflows/ci.yml'
+            rust:
+              - 'src-tauri/**'
+              - '.github/workflows/ci.yml'
+
+  frontend:
+    needs: changes
+    if: needs.changes.outputs.frontend == 'true'
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@34e114876b0b11c390a56381ad16ebd13914f8d5  # v4.3.1
+        with:
+          persist-credentials: false
+
+      - uses: actions/setup-node@49933ea5288caeca8642d1e84afbd3f7d6820020  # v4.4.0
         with:
           node-version: 22
           cache: npm
 
-      # Install system dependencies for Tauri (Linux only)
-      - name: Install system dependencies (Linux)
-        if: matrix.os == 'ubuntu-latest'
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y libwebkit2gtk-4.1-dev libappindicator3-dev librsvg2-dev patchelf libgtk-3-dev
-
       - run: npm ci --ignore-scripts
 
-      # Frontend checks
       - name: Lint frontend
         run: npx eslint src/
 
@@ -53,8 +79,36 @@ jobs:
       - name: Test frontend
         run: npx vitest run
 
-      # Rust checks
+  rust:
+    needs: changes
+    if: needs.changes.outputs.rust == 'true'
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ubuntu-latest, windows-latest, macos-latest]
+    runs-on: ${{ matrix.os }}
+    steps:
+      - uses: actions/checkout@34e114876b0b11c390a56381ad16ebd13914f8d5  # v4.3.1
+        with:
+          persist-credentials: false
+
+      - uses: dtolnay/rust-toolchain@631a55b12751854ce901bb631d5902ceb48146f7  # stable
+        with:
+          toolchain: stable
+          components: clippy, rustfmt
+
+      - uses: Swatinem/rust-cache@779680da715d629ac1d338a641029a2f4372abb5  # v2.8.2
+        with:
+          workspaces: src-tauri
+
+      - name: Install system dependencies (Linux)
+        if: matrix.os == 'ubuntu-latest'
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libwebkit2gtk-4.1-dev libappindicator3-dev librsvg2-dev patchelf libgtk-3-dev
+
       - name: Check Rust formatting
+        if: matrix.os == 'ubuntu-latest'
         run: cargo fmt --check --manifest-path src-tauri/Cargo.toml
 
       - name: Lint Rust code
@@ -63,10 +117,32 @@ jobs:
       - name: Run Rust tests
         run: cargo test --manifest-path src-tauri/Cargo.toml
 
-      # Build frontend (needed for Tauri build)
-      - name: Build frontend
-        run: npx vite build
-
-      # Build Tauri app (no bundling)
-      - name: Build Tauri app
-        run: cargo build --manifest-path src-tauri/Cargo.toml
+  ci-ok:
+    if: always()
+    needs: [commitlint, changes, frontend, rust]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check job results
+        env:
+          CHANGES_RESULT: ${{ needs.changes.result }}
+          COMMITLINT_RESULT: ${{ needs.commitlint.result }}
+          FRONTEND_RESULT: ${{ needs.frontend.result }}
+          RUST_RESULT: ${{ needs.rust.result }}
+        run: |
+          if [[ "$CHANGES_RESULT" == "failure" ]]; then
+            echo "changes job failed"
+            exit 1
+          fi
+          if [[ "$COMMITLINT_RESULT" == "failure" ]]; then
+            echo "commitlint job failed"
+            exit 1
+          fi
+          if [[ "$FRONTEND_RESULT" == "failure" ]]; then
+            echo "frontend job failed"
+            exit 1
+          fi
+          if [[ "$RUST_RESULT" == "failure" ]]; then
+            echo "rust job failed"
+            exit 1
+          fi
+          echo "All required checks passed or were skipped"
