fix(ci): use explicit file globs for release asset upload
The catch-all glob artifacts/**/* matched intermediate directories
(e.g. universal-apple-darwin), causing gh release upload to fail with
"is a directory". Use explicit extension globs instead.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -144,4 +144,4 @@ jobs:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           gh release upload "v${{ needs.release.outputs.new_release_version }}" \
-            artifacts/**/* --clobber
+            artifacts/**/*.dmg artifacts/**/*.msi artifacts/**/*.exe --clobber
