fix(ci): enable globstar for release asset upload globs
The upload-assets job used `artifacts/**/*.dmg` globs, but bash
doesn't enable recursive `**` matching by default. Without
`shopt -s globstar`, the deeply nested artifact paths from
download-artifact were not matched, causing the upload to fail
with "no matches found".

Enable `globstar` and `nullglob`, collect matches into an array,
and log them before uploading.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -142,5 +142,11 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          gh release upload "v${{ needs.release.outputs.new_release_version }}" \
-            artifacts/**/*.dmg artifacts/**/*.msi artifacts/**/*.exe --clobber
+          shopt -s globstar nullglob
+          files=(artifacts/**/*.dmg artifacts/**/*.msi artifacts/**/*.exe)
+          if [ ${#files[@]} -eq 0 ]; then
+            echo "::error::No release assets found in artifacts/"
+            exit 1
+          fi
+          printf '%s\n' "${files[@]}"
+          gh release upload "v${{ needs.release.outputs.new_release_version }}" "${files[@]}" --clobber
