chore: rename application from PTZ Cam Controller to Audience
Rename productName, window title, bundle identifier, crate name,
npm package name, and macOS camera permission string to Audience.
This changes the release asset filenames (.dmg, .msi, .exe).

--- a/src-tauri/Info.plist
+++ b/src-tauri/Info.plist
@@ -3,6 +3,6 @@
 <plist version="1.0">
 <dict>
 	<key>NSCameraUsageDescription</key>
-	<string>PTZ Cam Controller needs camera access to display your video sources</string>
+	<string>Audience needs camera access to display your video sources</string>
 </dict>
 </plist>
