--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ptzcam-controller",
+  "name": "audience",
   "version": "1.0.3",
   "private": true,
   "description": "Cross-platform PTZ camera controller with live video feed and preset management",
