--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
-name = "ptzcam-controller"
+name = "audience"
 version = "1.0.3"
 description = "Cross-platform PTZ camera controller"
-authors = ["PTZ Cam Controller Contributors"]
+authors = ["Audience Contributors"]
 edition = "2021"
 
 [lib]
-name = "ptzcam_controller_lib"
+name = "audience_lib"
 crate-type = ["staticlib", "cdylib", "rlib"]
 
 [build-dependencies]
